[package]
name = "applog"
version = "0.1.0"
edition = "2024"

[profile.release]
lto = true
strip = "symbols"

[dependencies]
windows-core = "0.62.2"
serde = { version = "*", features = ["derive"] }
bincode = { version = "*", features = ["serde"] }
time = { version = "*", features = ["serde", "local-offset", "formatting", "parsing"] }
fxhash = "*"
rand = "*"
aes = "*"
cbc = { version = "*", features = ["block-padding", "alloc"] }
base64 = "*"

[dependencies.windows]
version = "0.62.2"
features = [
    "Win32_Foundation",
    "Win32_Graphics_Dwm",
    "Win32_Graphics_Gdi",
    "Win32_Security",
    "Win32_System_EventLog",
    "Win32_System_Registry",
    "Win32_System_RemoteDesktop",
    "Win32_System_Threading",
    "Win32_UI_Controls",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
]
